feat(candidate): implement proctoring event logging API